--- a/org.modelica.mdt.test/.classpath
+++ b/org.modelica.mdt.test/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="bin" sourcepath="bin"/>
 	<classpathentry exported="true" kind="lib" path="lib/abbot.swt.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/abbot.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.swt"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
