--- a/org.modelica.mdt.omc/build.properties
+++ b/org.modelica.mdt.omc/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               .options
+               .options,\
+               lib/jacorb-3.9.jar,\
+               lib/jacorb-omgapi-3.9.jar,\
+               lib/jacorb-services-3.9.jar
