- minor changes, still not working

--- a/org.modelica.mdt.omc/build.properties
+++ b/org.modelica.mdt.omc/build.properties
@@ -1,9 +1,8 @@
+bin.includes = META-INF/,\
+               plugin.xml,\
+               .,\
+               .options,\
+               lib/
+jars.compile.order = .
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               plugin.xml,\
-               .options,\
-               lib/jacorb-3.9.jar,\
-               lib/jacorb-omgapi-3.9.jar,\
-               lib/jacorb-services-3.9.jar
