working MDT 0.7.47 - move all org.modelica.mdt.omc to org.modelica.mdt.core - remove plugin org.modelica.mdt.omc - include jacorb in the distribution of plugin org.modelica.mdt.core - adapt OMCProxy.java ORB.init to jacorb

--- a/org.modelica.mdt.core/build.properties
+++ b/org.modelica.mdt.core/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                .,\
-               lib/
+               lib/,\
+               lib/slf4j-api-1.7.14.jar,\
+               lib/slf4j-jdk14-1.7.14.jar
 jars.compile.order = .
 source.. = src/
